feat: start figma's project with html and some css codes

--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -3,14 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
-
-    <h1>Isso é um Título</h1>
-    <p>Isso é um parágrafo</p>
-
-    <img src="assets/html.png" alt="html assets">
 </head>
 <body>
     
+    <header></header>
+    <main>
+        <h1>Eleve seu negócio digital a outro nível <strong> com um Front-end de qualidade! </strong></h1>
+        <p>
+            Olá! Sou Samuel Charles, desenvolvedor Front-end com especialidade em Angular, HTML e CSS.
+            Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+        </p>
+    <a href="https://www.youtube.com/" target="_blank">Instagram</a>
+    <a href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
+    <img src="assets/img-profile.png" alt="profile image">
+    </main>
+    <footer></footer>
+
 </body>
 </html>
