--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -10,13 +10,18 @@
     
     <header></header>
     <main>
-        <h1>Eleve seu negócio digital a outro nível <strong> com um Front-end de qualidade! </strong></h1>
+    <div>
+        <h1>Eleve seu negócio digital a outro nível <strong id="emphasis"> com um <br> Front-end de qualidade! </strong></h1>
         <p>
             Olá! Sou Samuel Charles, desenvolvedor Front-end com especialidade em Angular, HTML e CSS.
             Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
         </p>
-    <a href="https://www.youtube.com/" target="_blank">Instagram</a>
-    <a href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
+        <div class="articles">
+            <a href="https://www.youtube.com/" target="_blank">Instagram</a>
+            <a href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
+        </div>
+        
+    </div>
     <img src="assets/img-profile.png" alt="profile image">
     </main>
     <footer></footer>
