feat: add styles for organize the display(main tag and img tag)

--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <header></header>
-    <main>
-    <div>
-        <h1>Eleve seu negócio digital a outro nível <strong id="emphasis"> com um <br> Front-end de qualidade! </strong></h1>
+    <main class="apresentation">
+      <section>
+        <h1>
+          Eleve seu negócio digital a outro nível
+          <strong class="strong-title">
+            com um <br />
+            Front-end de qualidade!
+          </strong>
+        </h1>
         <p>
-            Olá! Sou Samuel Charles, desenvolvedor Front-end com especialidade em Angular, HTML e CSS.
-            Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+          Olá! Sou Samuel Charles, desenvolvedor Front-end com especialidade em
+          Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem
+          em prática boas ideias. Vamos conversar?
         </p>
         <div class="articles">
-            <a href="https://www.youtube.com/" target="_blank">Instagram</a>
-            <a href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
+          <a href="https://www.youtube.com/" target="_blank">Instagram</a>
+          <a href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
         </div>
-        
-    </div>
-    <img src="assets/img-profile.png" alt="profile image">
+      </section>
+      <img src="assets/img-profile.png" alt="profile image" />
     </main>
     <footer></footer>
-
-</body>
+  </body>
 </html>
