--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -9,22 +9,21 @@
   <body>
     <header></header>
     <main class="apresentation">
-      <section>
-        <h1>
+      <section class="apresentation_content">
+        <h1 class="apresentation_content_title">
           Eleve seu negócio digital a outro nível
           <strong class="strong-title">
-            com um <br />
-            Front-end de qualidade!
+            com um Front-end de qualidade!
           </strong>
         </h1>
-        <p>
+        <p class="apresentation_content_text" >
           Olá! Sou Samuel Charles, desenvolvedor Front-end com especialidade em
           Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem
           em prática boas ideias. Vamos conversar?
         </p>
-        <div class="articles">
-          <a href="https://www.youtube.com/" target="_blank">Instagram</a>
-          <a href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
+        <div class="apresentation_links">
+          <a class="apresentation_links_link" href="https://www.youtube.com/" target="_blank">Instagram</a>
+          <a class="apresentation_links_link" href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
         </div>
       </section>
       <img src="assets/img-profile.png" alt="profile image" />
