--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Portfolio</title>
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <nav class="header_menu"> 
+        <a href="index.html" class="header_menu_links">Home</a>
+        <a href="about.html" class="header_menu_links">About Me</a>
+      </nav>
+    </header>
     <main class="apresentation">
       <section class="apresentation_content">
         <h1 class="apresentation_content_title">
@@ -16,18 +21,31 @@
             com um Front-end de qualidade!
           </strong>
         </h1>
-        <p class="apresentation_content_text" >
+        <p class="apresentation_content_text">
           Olá! Sou Samuel Charles, desenvolvedor Front-end com especialidade em
           Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem
           em prática boas ideias. Vamos conversar?
         </p>
         <div class="apresentation_links">
-          <a class="apresentation_links_link" href="https://www.youtube.com/" target="_blank">Instagram</a>
-          <a class="apresentation_links_link" href="https://github.com/SamuelPDS" target="_blank">GitHub</a>
+          <h2 class="apresentation_links_h2">Acesse minhas redes:</h2>
+          <a class="apresentation_links_link" href="https://github.com/SamuelPDS" target="_blank">
+            <img src="assets/Assets-aula2-curso3-html-e-css-main/assets/github.png" alt="">
+            GitHub
+          </a>
+          <a class="apresentation_links_link" href="https://www.linkedin.com/in/samuel-charles-571614202" target="_blank">
+            <img src="assets/Assets-aula2-curso3-html-e-css-main/assets/linkedin.png" alt="">
+            Linkedin
+          </a>
+          <a class="apresentation_links_link" href="https://github.com/SamuelPDS" target="_blank">
+            <img src="assets/Assets-aula2-curso3-html-e-css-main/assets/twitch.png" alt="">
+            Twitch
+          </a>
+
         </div>
       </section>
-      <img src="assets/img-profile.png" alt="profile image" />
+      <img src="assets/img-profile.png" alt="profile image" class="apresentation_links_profile_img"/>
     </main>
-    <footer></footer>
+
+    <footer class="footer">© Samuel Charles 2023 All rights reserved</footer>
   </body>
 </html>
