refact: change the name-lassc

--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -28,22 +28,22 @@
         </p>
         <div class="apresentation_links">
           <h2 class="apresentation_links_h2">Acesse minhas redes:</h2>
-          <a class="apresentation_links_link" href="https://github.com/SamuelPDS" target="_blank">
+          <a class="apresentation_links_navegacao" href="https://github.com/SamuelPDS" target="_blank">
             <img src="assets/Assets-aula2-curso3-html-e-css-main/assets/github.png" alt="">
             GitHub
           </a>
-          <a class="apresentation_links_link" href="https://www.linkedin.com/in/samuel-charles-571614202" target="_blank">
+          <a class="apresentation_links_navegacao" href="https://www.linkedin.com/in/samuel-charles-571614202" target="_blank">
             <img src="assets/Assets-aula2-curso3-html-e-css-main/assets/linkedin.png" alt="">
             Linkedin
           </a>
-          <a class="apresentation_links_link" href="https://github.com/SamuelPDS" target="_blank">
+          <a class="apresentation_links_navegacao" href="https://github.com/SamuelPDS" target="_blank">
             <img src="assets/Assets-aula2-curso3-html-e-css-main/assets/twitch.png" alt="">
             Twitch
           </a>
 
         </div>
       </section>
-      <img src="assets/img-profile.png" alt="profile image" class="apresentation_links_profile_img"/>
+      <img class="apresentation_img"  src="assets/img-profile.png" alt="profile image"/>
     </main>
 
     <footer class="footer">© Samuel Charles 2023 All rights reserved</footer>
