feat: some changes

--- a/formação-html-css/index.html
+++ b/formação-html-css/index.html
@@ -43,7 +43,7 @@
 
         </div>
       </section>
-      <img class="apresentation_img"  src="assets/img-profile.png" alt="profile image"/>
+      <img class="apresentation_img"  src="assets/me.jpg" alt="profile image"/>
     </main>
 
     <footer class="footer">© Samuel Charles 2023 All rights reserved</footer>
