--- a/alura-plus/index.html
+++ b/alura-plus/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <section class="container principal">
-        <div>
+        <div class="container__box">
             <h1 class="container___title">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
             <img src="assets/Combo.png" alt="Alura+ e alura língua" class="container__img">
             <a href="www.alura.com.br" class="container__btn">Assine por 12x de R$ 120,00*</a>
