--- a/alura-plus/index.html
+++ b/alura-plus/index.html
@@ -19,5 +19,32 @@
             <p class="container__notice">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>    
     </section>
+
+    <section class="container secondary">
+        <img src="assets/plataformas.png" alt="um monitor e um celular com o alura plus" class="container__img">
+        <div class="container_description">
+            <h2 class="title__description">Assista do seu jeito</h2>
+            <p class="text__description">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+
+    <section class="container secondary">
+        <div class="container__description">
+            <p class="text_description">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+            <a href="www.alura.com.br" class="container__btn btn_secondary">Assine o Combo+</a>
+        </div>
+        <img src="assets/Telas.png" alt="Duas telas de computador ">
+    </section>
+
+    <section class="container secondary">
+        <img src="assets/Notebook.png" alt="Imagem de um notebook com a tela no site da Alura">
+
+        <div class="container__description">
+            <h2 class="title__description">Baixe seus Cursos</h2>
+            <p class="text__description">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
 </body>
 </html>
