feat: add section devices and footer tag and add styles

--- a/alura-plus/index.html
+++ b/alura-plus/index.html
@@ -33,7 +33,7 @@
             <p class="text_description">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
             <a href="www.alura.com.br" class="container__btn btn_secondary">Assine o Combo+</a>
         </div>
-        <img src="assets/Telas.png" alt="Duas telas de computador ">
+        <img src="assets/Telas.png" alt="Duas telas de computador" class="container__description_img">
     </section>
 
     <section class="container secondary">
@@ -46,5 +46,67 @@
             </p>
         </div>
     </section>
+
+    <section class="devices">
+        <h2 class="devices__title">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="devices__list">
+            <li>
+                <img src="assets/tv.png" alt="Ícone de Televisão">
+                <h3 class="list__item">TV</h3>
+            </li>
+
+            <li>
+                <img src="assets/computador.png" alt="icone de computador">
+                <h3 class="list__item">Computadores</h3>
+             </li>
+
+            <li>
+                <img src="assets/celular.png" alt="">
+                <h3 class="list__item">Celular</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="footer">
+        <img src="assets/Logo.png" alt="Alura+" class="footer__logo">
+        <ul class="footer__list">
+            <li class="list__link">
+                <a href="#" class="list__link_link">Idioma</a>
+            </li>
+
+            <li class="list__link">
+                <a href="#" class="list__link_link">Dispositivos compatíveis</a>
+            </li>
+
+            <li class="list__link">
+                <a href="#" class="list__link_link">Contrato de assinatura </a>
+            </li>
+
+            <li class="list__link">
+                <a href="#" class="list__link_link">Politica de privacidade</a>
+            </li>
+
+            <li class="list__link">
+                <a href="#" class="list__link_link">Proteção de dados no Brasil</a>
+            </li>
+
+            <li class="list__link">
+                <a href="#" class="list__link_link">Anuncios personalizados</a>
+            </li>
+
+            <li class="list__link">
+                <a href="#" class="list__link_link">Ajuda</a>
+
+            </li>
+        </ul>
+        <div class="footer__text">
+        <p class="footer__text_text">
+            ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+        </p>
+        <p class="footer__text_text">
+            Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+        </p>
+        </div>
+    </footer >
 </body>
 </html>
