--- a/formação-javascript/guess-number/index.html
+++ b/formação-javascript/guess-number/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Secret Number</title>
 </head>
@@ -12,10 +14,11 @@
     <h1>Hit the Right Number</h1>
     <h3>The secret number is beetween <span id="smaller-number">0</span> and <span id="bigger-number">100</span></h3>
 
-    <div id="guess" class="message"></div>
-    <div>You said:</div>
-    <span class="box"></span>
-    <div>The secret number is bigger! <i class="fa-solid fa-up-long"></i></div>
-    <div>The secret number is smaller!</div>
+    <div id="guess" class="message">
+        <div>You said:</div>
+        <span class="box">20</span>
+        <div>The secret number is bigger! <i class="fa-solid fa-up-long"></i></div>
+        <div>The secret number is smaller!</div>
+    </div>
 </body>
 </html>
