feat: add the path to script code

--- a/formação-javascript/guess-number/index.html
+++ b/formação-javascript/guess-number/index.html
@@ -20,5 +20,7 @@
         <div>The secret number is bigger! <i class="fa-solid fa-up-long"></i></div>
         <div>The secret number is smaller!</div>
     </div>
+
+    <script src="app/drownNumber.js"></script>
 </body>
 </html>
