feat: add the path to voiceRecognition.js

--- a/formação-javascript/guess-number/index.html
+++ b/formação-javascript/guess-number/index.html
@@ -22,5 +22,6 @@
     </div>
 
     <script src="app/drownNumber.js"></script>
+    <script src="app/voiceRecognition.js"></script>
 </body>
 </html>
