--- a/formação-javascript/guess-number/index.html
+++ b/formação-javascript/guess-number/index.html
@@ -15,13 +15,10 @@
     <h3>The secret number is beetween <span id="smaller-number">0</span> and <span id="bigger-number">100</span></h3>
 
     <div id="guess" class="message">
-        <div>You said:</div>
-        <span class="box">20</span>
-        <div>The secret number is bigger! <i class="fa-solid fa-up-long"></i></div>
-        <div>The secret number is smaller!</div>
     </div>
 
     <script src="app/drownNumber.js"></script>
     <script src="app/voiceRecognition.js"></script>
+    <script src="app/validations.js"></script>
 </body>
 </html>
