feat: add sidebar

--- a/projeto-vidflow-main/index.html
+++ b/projeto-vidflow-main/index.html
@@ -46,5 +46,46 @@
         </nav>
     </header>
 
+    <main>
+        <nav class="sidebar__lateral__container">
+            <ul class="sidebar__lateral__content">
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/home.png" alt="home icon"> Início</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/explore.png" alt="explore icon"> Explorar</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/airplay.png" alt=""> Shorts</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/subscriptions.png" alt=""> Inscrições</a></li>
+            </ul>
+            <div class="sidebar__lateral__content_after"></div>
+
+            <ul class="sidebar__lateral__content">
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/video_library.png" alt="video libary icon"> Biblioteca</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/history.png" alt="history icon">Histórico</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/history_toggle_off.png" alt=""> Assistir mais tarde</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/thumb_up_alt.png" alt=""> Marcados como com like</a></li>
+            </ul>
+            <div class="sidebar__lateral__content_after"></div>
+
+            <ul class="sidebar__lateral__content">
+                <h3 class="sidebar__lateral__h3">INSCRIÇÕES</h3>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Alura.png" alt="alura avatar"> Alura</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Gaveta.png" alt="gaveta avatar"> Gaveta</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Rafa.png" alt="rafa avatar"> Rafaella Ballerini</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Atila.png" alt="atila avatar"> Atila Lamarino</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Souto.png" alt="souto avatar"> Maria Souto</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Jovem_Nerd.png" alt="jovem nerd avatar"> Jovem Nerd</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/Avatar_Deschamps.png" alt="Deschamps avatar"> Felipe Deschamps</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img id="sidebar__lateral__arrow_img" src="img/sidebar/keyboard_arrow_down.png" alt="Deschamps avatar"> Mostrar mais 2</a></li>
+            </ul>
+            <div class="sidebar__lateral__content_after"></div>
+
+            <ul class="sidebar__lateral__content">
+                <h3 class="sidebar__lateral__h3">MAIS DA PÁGINA</h3>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/ondemand_video.png" alt="home icon"> Vídeos Premiun</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/movie.png" alt="explore icon"> Filmes</a></li>
+                <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/sports_esports.png" alt=""> Jogos</a></li>
+            </ul>
+            <div class="sidebar__lateral__content_after"></div>
+        </nav>
+    </main>
+
 </body>
 </html>
