--- a/projeto-vidflow-main/index.html
+++ b/projeto-vidflow-main/index.html
@@ -46,7 +46,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-container">
         <nav class="sidebar__lateral__container">
             <ul class="sidebar__lateral__content">
                 <li><a href="#" class="sidebar__lateral__item"> <img src="img/sidebar/home.png" alt="home icon"> Início</a></li>
@@ -85,7 +85,26 @@
             </ul>
             <div class="sidebar__lateral__content_after"></div>
         </nav>
-    </main>
 
+    </main>
+    <section class="superior__secao__container">
+        <div class="superior__secao__container-wrapper">
+            <a href="#" name="Tudo" class="superior__item">Tudo</a>
+            <a href="#" name="Debates" class="superior__item">Debates</a>
+            <a href="#" name="Ao Vivo" class="superior__item">Ao Vivo</a>
+            <a href="#" name="Podcasts" class="superior__item">Podcasts</a>
+            <a href="#" name="Frontend" class="superior__item">Front-end</a>
+            <a href="#" name="Mobile" class="superior__item" >Mobile</a>
+            <a href="#" name="Data Science" class="superior__item">Data Science</a>
+            <a href="#" name="Apps" class="superior__item">Apps</a>
+            <a href="#" name="Programação" class="superior__item">Programação</a>
+            <a href="#" name="Inteligência Artificial" class="superior__item">Inteligência Artificial</a> 
+            <a href="#" name="Inovação" class="superior__item">Inovação</a> 
+        </div>
+        <label class="superior__slider">
+            <span><img src="./img/arrow_forward_ios.png" alt="Felxa direcionada para a direita" sizes="" srcset=""></span>
+        </label>
+    </section>
+<script src="script.js"></script>
 </body>
 </html>
