feat: add the code to filter the books in the cosole

--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -275,9 +275,10 @@
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
 
-  <script src="app/main.js"></script>
   <script src="app/forEach.js"></script>
   <script src="app/Map.js"></script>
+  <script src="app/filter.js"></script>
+  <script src="app/main.js"></script>
 </body>
 
 </html>
