--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -279,6 +279,7 @@
   <script src="app/Map.js"></script>
   <script src="app/filter.js"></script>
   <script src="app/main.js"></script>
+  <script src="app/sort.js"></script>
 </body>
 
 </html>
