--- a/alura_books/index.html
+++ b/alura_books/index.html
@@ -280,6 +280,7 @@
   <script src="app/filter.js"></script>
   <script src="app/main.js"></script>
   <script src="app/sort.js"></script>
+  <script src="app/reduce.js"></script>
 </body>
 
 </html>
