--- a/aluraplay-requisicoes/pages/enviar-video.html
+++ b/aluraplay-requisicoes/pages/enviar-video.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/estilos-form.css">
     <link rel="stylesheet" href="../css/flexbox.css">
     <title>AluraPlay</title>
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
                         id='imagem' />
                 </div>
 
-                <input class="formulario__botao" type="submit" />
+                <input class="formulario__botao" type="submit"/>
         </form>
 
     </main>
