feat: add the function to filter the videos by the searchbar

--- a/aluraplay-requisicoes/index.html
+++ b/aluraplay-requisicoes/index.html
@@ -39,6 +39,7 @@
     </ul>
 
     <script src="js/mostraVideos.js" type="module"></script>
+    <script src="js/filtrarVideos.js"></script>
     
 </body>
 
