refact: change the seletor to the html input

--- a/aluraplay-requisicoes/index.html
+++ b/aluraplay-requisicoes/index.html
@@ -22,7 +22,7 @@
 
             <div class="cabecalho__pesquisar">
 
-                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input">
+                <input type="search" placeholder="Pesquisar" id="pesquisar" class="pesquisar__input" data-pesquisa>
                 <button class="pesquisar__botao">
 
             </div>
