--- a/aluraplay-requisicoes/pages/enviar-video.html
+++ b/aluraplay-requisicoes/pages/enviar-video.html
@@ -56,7 +56,7 @@
         </form>
 
     </main>
-<script src="../js/formSubmit.js" type="module"></script>
+    <script src="/aluraplay-requisicoes/js/formSubmit.js" type="module"></script>
 </body>
 
 </html>
