--- a/praticando-logica/alugames/index.html
+++ b/praticando-logica/alugames/index.html
@@ -20,25 +20,25 @@
         <section class="dashboard">
             <ul class="dashboard__items">
                 <li class="dashboard__items__item" id="game-1">
-                    <div class="dashboard__item__img">
-                        <img src="img/monopoly.png" alt="Capa jogo Monopoly">
+                    <div class="dashboard__item__img" id="monopoly-img">
+                        <img src="img/monopoly.png" alt="Capa jogo Monopoly" class="dashboard__item__img-content">
                     </div>
                     <p class="dashboard__item__name">Monopoly</p>
-                    <a onclick="alterarStatus(1)" href="#" class="dashboard__item__button">Alugar</a>
+                    <a  href="#" class="dashboard__item__button" id="monopoly">Alugar</a>
                 </li>
                 <li class="dashboard__items__item" id="game-2">
                     <div class="dashboard__item__img">
-                        <img src="img/ticket_to_ride.png" alt="Capa jogo Ticket to Ride">
+                        <img src="img/ticket_to_ride.png" alt="Capa jogo Ticket to Ride" class="dashboard__item__img-content">
                     </div>
-                    <p class="dashboard__item__name">Ticket to Ride</p>
-                    <a onclick="alterarStatus(2)" href="#" class="dashboard__item__button">Alugar</a>
+                    <p class="dashboard__item__name" >Ticket to Ride</p>
+                    <a href="#" class="dashboard__item__button" id="tocketRide">Alugar</a>
                 </li>
                 <li class="dashboard__items__item" id="game-3">
-                    <div class="dashboard__item__img dashboard__item__img--rented">
-                        <img src="img/takenoko.png" alt="Capa jogo Takenoko">
+                    <div class="dashboard__item__img">
+                        <img src="img/takenoko.png" alt="Capa jogo Takenoko" class="dashboard__item__img-content">
                     </div>
                     <p class="dashboard__item__name">Takenoko</p>
-                    <a onclick="alterarStatus(3)" href="#" class="dashboard__item__button dashboard__item__button--return">Devolver</a>
+                    <a  href="#" class="dashboard__item__button" id="Takenoko">Devolver</a>
                 </li>
             </ul>
         </section>
