--- a/praticando-logica/carrinho-compras/index.html
+++ b/praticando-logica/carrinho-compras/index.html
@@ -40,8 +40,8 @@
           </label>
 
           <section class="botoes-wrapper">
-            <button onclick="adicionar()" type="button" class="botao-form botao-adicionar">Adicionar</button>
-            <button onclick="limpar()" type="button" class="botao-form botao-limpar">Limpar</button>
+            <button type="submit" class="botao-form botao-adicionar">Adicionar</button>
+            <button type="reset" class="botao-form botao-limpar">Limpar</button>
           </section>
         </section>
       </form>
