feat: finished the logical to add the value in the historic and clean, according the button click

--- a/praticando-logica/carrinho-compras/index.html
+++ b/praticando-logica/carrinho-compras/index.html
@@ -54,12 +54,13 @@
 
         <h2 class="carrinho__titulo">Produtos no carrinho</h2>
       </div>
-
-      <section class="carrinho__produtos" id="lista-produtos">
-        <section class="carrinho__produtos__produto">
-          <span class="texto-azul">1x</span> Celular <span class="texto-azul">R$1400</span>
+      <div class="product-historic">
+        <section class="carrinho__produtos" id="lista-produtos">
+          <section class="carrinho__produtos__produto">
+            <span class="texto-azul">1x</span> Celular <span class="texto-azul">R$1400</span>
+          </section>
         </section>
-      </section>
+      </div>
 
       <div class="divisoria"></div>
 
